--- a/package.json
+++ b/package.json
@@ -42,8 +42,11 @@
     "isomorphic-fetch": "^2.2.1",
     "limax": "^1.3.0",
     "mongoose": "^4.4.20",
+    "normalizr": "^3.3.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
+    "react-dnd": "^7.0.2",
+    "react-dnd-html5-backend": "^7.0.2",
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
     "react-intl": "^2.1.2",
